# freq_bin_entanglement_detector_sim

./: .gitignore  DESIGN.md  README.md  example_output.txt  pyproject.toml
docs/: wireframe.mmd
docs/images/: component.mmd  sequence.mmd
jules-scratch/verification/: verify_gui.py
src/spad_sim/: __init__.py  core.py  gui.py  io.py  plotting.py  spad_sim.py
tests/: test_simulation.py
