[project]
name = "spad-sim"
version = "0.1.0"
description = "A simulation tool for Single-Photon Avalanche Diode (SPAD) systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "PyQt6",
    "pyqtgraph",
]

[project.scripts]
spad-sim = "spad_sim:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
